--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,11 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@apollo/server": "^4.10.1",
     "bcrypt": "^4.0.1",
+    "dotenv": "^16.4.5",
     "express": "^4.17.1",
     "graphql": "^16.8.1",
     "jsonwebtoken": "^8.5.1",
